# maker-production-os

./: .env.example  .gitignore  CODEX-LOG.md  DEMO-SCRIPT.md  LICENSE  README.md  ROADMAP.md  SPEC.md  pyproject.toml  render.yaml
app/: database.py  incidents.py  main.py  models.py  observability.py  operations.py
app/static/: styles.css
app/templates/: _incident_banner.html  board.html  dashboard.html  dashboard_link.html  incident.html  order.html  reupload.html  reupload_success.html
tests/: conftest.py  test_production_flow.py
